--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ptomasroos/react-native-idfa",
+  "name": "react-native-idfa",
   "version": "2.1.0",
   "description": "Android and iOS module to read IDFA",
   "main": "index.js",
